Linux Mint and updates

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,6 +27,7 @@ jobs:
           "debian-buster-ca-certificates", "debian-buster", "debian-testing-ca-certificates",
           "fedora-32", "fedora-33",
           "gentoo",
+          "linuxmint-193",
           "opensuse-tumbleweed",
           "openwrt",
           "rhel8-ubi",
