--- a/Dockerfile.linuxmint-193
+++ b/Dockerfile.linuxmint-193
@@ -1,7 +1,7 @@
-FROM ubuntu:bionic
+FROM linuxmintd/mint19.3-amd64
 RUN apt update && \
     apt upgrade -y && \
-    apt install -y python3 ca-certificates && \
+    apt install -y python3 && \
     apt clean
 
 COPY check_openssl_conf.py /
