--- a/Dockerfile.opensuse-tumbleweed
+++ b/Dockerfile.opensuse-tumbleweed
@@ -1,5 +1,6 @@
 FROM opensuse/tumbleweed:latest
-RUN zypper install -y python3
+RUN zypper update -y && \
+    zypper install -y python3
 
 COPY check_openssl_conf.py /
 RUN /check_openssl_conf.py
