--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -71,12 +71,35 @@ jobs:
           name: result
           path: result-freebsd-ca_root_nss.json
 
+  mac_win:
+    name: "OS ${{ matrix.os }} with Python ${{ matrix.python-version }}"
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [macos-latest, windows-latest]
+        python-version: [3.8]
+    steps:
+      - name: checkout
+        uses: "actions/checkout@v2"
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Run script
+        run: python tools/check_openssl_conf.py > result-os-${{ matrix.os }}-${{ matrix.python-version }}.json
+      - uses: actions/upload-artifact@v2
+        with:
+          name: result
+          path: result-os-${{ matrix.os }}-${{ matrix.python-version }}.json
+
   analyze:
     name: "Analyze results"
     runs-on: "ubuntu-latest"
     needs:
       - distros
       - freebsd
+      - mac_win
     steps:
       - name: checkout
         uses: "actions/checkout@v2"
