--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -87,7 +87,7 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
       - name: Run script
-        run: python tools/check_openssl_conf.py > result-os-${{ matrix.os }}-${{ matrix.python-version }}.json
+        run: python tools/check_openssl_conf.py | tee result-os-${{ matrix.os }}-${{ matrix.python-version }}.json
       - uses: actions/upload-artifact@v2
         with:
           name: result
