--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,6 +63,7 @@ jobs:
           usesh: true
           prepare: pkg install -y python3 ca_root_nss
           run: |
+            set -ex
             ./tools/check_openssl_conf.py > result-freebsd-ca_root_nss.json
       - name: Show results
         run: cat result-freebsd-ca_root_nss.json
@@ -87,7 +88,9 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
       - name: Run script
-        run: python tools/check_openssl_conf.py | tee result-os-${{ matrix.os }}-${{ matrix.python-version }}.json
+        run: |
+          set -ex
+          python tools/check_openssl_conf.py | tee result-os-${{ matrix.os }}-${{ matrix.python-version }}.json
       - uses: actions/upload-artifact@v2
         with:
           name: result
@@ -108,7 +111,9 @@ jobs:
         with:
           name: result
       - name: "Run analyze script"
-        run: tools/analyze_results.py | tee analyzed.json
+        run: |
+          set -ex
+          tools/analyze_results.py | tee analyzed.json
       - uses: actions/upload-artifact@v2
         with:
           name: analyzed
