--- a/Dockerfile.alpine
+++ b/Dockerfile.alpine
@@ -1,6 +1,9 @@
 FROM alpine:latest
 RUN apk add python3
 
-COPY check_openssl_conf.py /
-RUN /check_openssl_conf.py
-ENTRYPOINT /check_openssl_conf.py
+ENV DISTRO_TRUSTSTORE_NAME="alpine:latest"
+ENV PYTHON="python3"
+
+COPY check_openssl_conf.py entrypoint.sh /
+RUN /entrypoint.sh
+ENTRYPOINT /entrypoint.sh
