--- a/Dockerfile.archlinux
+++ b/Dockerfile.archlinux
@@ -1,6 +1,9 @@
 FROM archlinux:latest
 RUN pacman -Sy && pacman --noconfirm -S python3
 
-COPY check_openssl_conf.py /
-RUN /check_openssl_conf.py
-ENTRYPOINT /check_openssl_conf.py
+ENV DISTRO_TRUSTSTORE_NAME="archlinux:latest"
+ENV PYTHON="python3"
+
+COPY check_openssl_conf.py entrypoint.sh /
+RUN /entrypoint.sh
+ENTRYPOINT /entrypoint.sh
