--- a/Dockerfile.openwrt
+++ b/Dockerfile.openwrt
@@ -3,6 +3,9 @@ RUN mkdir -p /var/lock && \
     opkg update && \
     opkg install python3
 
-COPY check_openssl_conf.py /
-RUN /check_openssl_conf.py
-ENTRYPOINT /check_openssl_conf.py
+ENV DISTRO_TRUSTSTORE_NAME="OpenWRT RootFS"
+ENV PYTHON="python3"
+
+COPY check_openssl_conf.py entrypoint.sh /
+RUN /entrypoint.sh
+ENTRYPOINT /entrypoint.sh
