--- a/Dockerfile.rhel8-ubi
+++ b/Dockerfile.rhel8-ubi
@@ -3,6 +3,9 @@ RUN microdnf update -y && \
     microdnf install -y python3 && \
     microdnf clean all
 
-COPY check_openssl_conf.py /
-RUN /check_openssl_conf.py
-ENTRYPOINT /check_openssl_conf.py
+ENV DISTRO_TRUSTSTORE_NAME="RHEL 8.3 UBI"
+ENV PYTHON="python3"
+
+COPY check_openssl_conf.py entrypoint.sh /
+RUN /entrypoint.sh
+ENTRYPOINT /entrypoint.sh
