Update FreeBSD vmaction

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,7 +60,7 @@ jobs:
       - name: checkout
         uses: "actions/checkout@v2"
       - name: Run test in FreeBSD VM
-        uses: vmactions/freebsd-vm@v0.0.8
+        uses: "vmactions/freebsd-vm@v0.1.2"
         with:
           usesh: true
           run: |
